--- a/assets/template/css/style.css
+++ b/assets/template/css/style.css
@@ -124,3 +124,20 @@ body {
     margin-top: 7rem;
   }
 }
+
+/* pagination */
+.paginasi{
+  padding: 10px 20px;
+  border: 10px;
+  min-height: 40px;
+  color: #22a6b3
+
+}
+
+.paginasi a{
+  padding: 5px 10px;
+  border-radius: 3px;
+  background-color: #22a6b3;
+  margin: 3px 10px;
+  color: white;
+}
